# the-moderator

./: Cargo.toml  index.html
.cargo/: config.toml
assets/: world.ldtk
src/: asset_loader.rs  common_components.rs  components.rs  consts.rs  main.rs  mod.rs  resources.rs  utils.rs
src/bundles/: actors.rs  character.rs  mod.rs  movable_object.rs  movable_sprite.rs  platform.rs  platforms.rs
src/debugging/: debug_boxes.rs  mod.rs  player_box.rs
src/plugins/: animation_loader.rs  asset_loader.rs  assets_loader.rs  assets_plugin.rs  camera_plugin.rs  character.rs  collisions.rs  default_plugins.rs  ground.rs  hello_plugin.rs  mod.rs  physics.rs  platform.rs  player_plugin.rs  spammer_plugin.rs  walls.rs
src/plugins/asset_loader/: asset_loader.rs  death_effect.rs  fire_slash_assets.rs  flying_spammer_assets.rs  hammer_throw_assets.rs  mod.rs  peach_asset.rs  player_assets.rs  spammer_assets.rs  weapon_assets.rs
src/plugins/enemies/: flying_spammer.rs  mod.rs  spammer.rs  spammer_plugin.rs
src/plugins/mouse/: mod.rs
src/plugins/physics/: collider.rs  collision.rs  entity_type.rs  mod.rs  state.rs
src/plugins/platform/: mod.rs
src/plugins/player/: animation.rs  constants.rs  mod.rs  player_animation.rs  player_input.rs  player_movement.rs
src/plugins/player/attacks/: fire_slash.rs  hammer_slash.rs  hammer_throw.rs  mod.rs
