[package]
name = "the-moderator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "wayland"] }
rand = "0.8.5"
bevy_rapier2d = { version = "0.27.0", features = [
  "debug-render-2d",
  "simd-stable",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
