[package]
name = "the-moderator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
bevy_ecs_ldtk = "0.10.0"
avian2d = "0.1.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[toolchain]
channel = "nightly"
